CB update css to prevent overflow

--- a/sass/theme/components/_home-banner.scss
+++ b/sass/theme/components/_home-banner.scss
@@ -84,7 +84,7 @@ $btn-padding: 58px;
 			right: 0;
 			z-index: 10;
 			position: absolute;
-			opacity: .4;
+			opacity: .6;
 		}
 		video {
 			z-index: 5;
